K8s Guides/Ingress/src/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: my-deploy
        labels:
                app: my-deploy
spec:
        replicas: 10
        selector:
            matchLabels:
                app: httpd
        template:
                metadata:
                        name: httpd
                        labels:
                                app: httpd
                spec:
                    containers:
                        - name: httpd
                          image: httpd
                          ports:
                                  - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
        name: httpd-service
spec:
        selector:
            app: httpd
#        type: NodePort
        ports:
         - protocol: TCP
           port: 80
           targetPort: 80
#           nodePort: 30100
